--- a/snowdrop/pom.xml
+++ b/snowdrop/pom.xml
@@ -322,9 +322,6 @@
         </profile>
         <profile>
             <id>target-jboss-as</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
             <properties>
                 <targetGroupId>org.jboss.as</targetGroupId>
                 <targetArtifactIdPrefix>jboss-as</targetArtifactIdPrefix>
@@ -438,15 +435,18 @@
         </profile>
         <profile>
             <id>target-wildfly</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <properties>
                 <targetGroupId>org.wildfly</targetGroupId>
                 <targetArtifactIdPrefix>wildfly</targetArtifactIdPrefix>
-                <version.org.wildfly>8.0.0.Alpha1</version.org.wildfly>
+                <version.org.wildfly>8.2.1.Final</version.org.wildfly>
                 <version.org.jboss.jandex>1.1.0.Final</version.org.jboss.jandex>
                 <version.org.jboss.jboss-dmr>1.2.0.Final</version.org.jboss.jboss-dmr>
                 <version.org.jboss.logging>3.1.3.GA</version.org.jboss.logging>
                 <version.org.jboss.modules>1.2.0.Final</version.org.jboss.modules>
-                <version.org.jboss.msc>1.2.0.CR1</version.org.jboss.msc>
+                <version.org.jboss.msc>1.2.2.Final</version.org.jboss.msc>
                 <version.org.jboss.spec.javax.ejb>1.0.2.Final</version.org.jboss.spec.javax.ejb>
                 <version.org.jboss.spec.javax.interceptor>1.0.1.Final</version.org.jboss.spec.javax.interceptor>
                 <version.org.jboss.spec.javax.resource>1.0.1.Final</version.org.jboss.spec.javax.resource>
